logo app centered

--- a/app/styles/components/shared/c-header.scss
+++ b/app/styles/components/shared/c-header.scss
@@ -31,6 +31,12 @@
     }
   }
 
+  .app-logo {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+
   .share-header {
     color: $color-4;
     display: block;
