fixed logo width in tablet or higher

--- a/app/styles/components/shared/c-header.scss
+++ b/app/styles/components/shared/c-header.scss
@@ -35,6 +35,11 @@
     display: flex;
     justify-content: center;
     width: 100%;
+
+    @media #{$mq-tablet} {
+      display: inline-block;
+      width: auto;
+    }
   }
 
   .share-header {
