opaque header in mobile

--- a/app/styles/components/shared/c-header.scss
+++ b/app/styles/components/shared/c-header.scss
@@ -1,10 +1,14 @@
 @import '../../settings';
 
 .c-header {
-  background-color: transparent;
+  background-color: $color-13;
   box-shadow: 0 2px 4px 0 rgba($color-12, .5);
   position: relative;
   z-index: 11;
+
+  @media #{$mq-tablet} {
+    background-color: transparent;
+  }
 
   .contain-nav {
     align-items: center;
