updated queries for header

--- a/public/form/css/styles.css
+++ b/public/form/css/styles.css
@@ -170,6 +170,12 @@ header {
   justify-content: flex-end;
 }
 
+@media screen and (min-width: 320px) {
+  .menu {
+    justify-content: center;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .menu {
     justify-content: space-between;
