--- a/app/styles/components/shared/c-content-accordion.scss
+++ b/app/styles/components/shared/c-content-accordion.scss
@@ -1,22 +1,49 @@
 @import '../../settings';
 
 .c-content-accordion {
-  padding: 50px 0 65px;
+
+  @media #{$mq-tablet} {
+    padding: 25px 0;
+  }
+
+  &:last-child {
+    padding-bottom: 0;
+  }
 
   > .accordion-item {
-    padding: 30px 0;
+    padding: 25px 0 30px;
     position: relative;
+
+    &:first-child {
+      padding-top: 0;
+    }
+
+    &:last-child {
+      padding-bottom: 0;
+
+      &::after {
+        content: none;
+      }
+    }
 
     &::after {
       background-color: $color-10;
       bottom: 0;
       content: '';
       height: 2px;
-      left: 50%;
       position: absolute;
       top: auto;
-      transform: translate(-50%, 0);
-      width: 100vw;
+      width: 100%;
+    }
+
+    @media #{$mq-tablet} {
+      padding: 30px 0;
+
+      &::after {
+        left: 50%;
+        transform: translate(-50%, 0);
+        width: 100vw;
+      }
     }
   }
 
