--- a/app/styles/layout/l-static-page.scss
+++ b/app/styles/layout/l-static-page.scss
@@ -1,5 +1,13 @@
 @import '../settings';
 
 .l-static-page {
-  padding: 85px 0 90px;
+  padding: 35px 0 60px;
+
+  @media #{$mq-tablet} {
+    padding: 85px 0 90px;
+  }
+
+  .intro {
+    margin-bottom: 20px;
+  }
 }
