--- a/app/styles/components/c-footer.scss
+++ b/app/styles/components/c-footer.scss
@@ -122,7 +122,7 @@
         > .nav-link {
           color: $color-16;
           font-size: 15px;
-          font-weight: $font-weight-light;
+          font-weight: $font-weight-normal;
           text-decoration: none;
           text-transform: uppercase;
         }
@@ -177,8 +177,8 @@
       border-radius: 1px;
       color: $color-4;
       display: flex;
-      font-size: $font-size-x-small;
-      font-weight: $font-weight-light;
+      font-size: $font-size-normal;
+      font-weight: $font-weight-normal;
       margin-right: 15px;
       max-width: 150px;
       padding: 14px 15px;
@@ -188,6 +188,7 @@
       @media #{$mq-tablet} {
         margin-right: 0;
         max-width: none;
+        font-size: $font-size-x-small;
         padding: 10px 15px;
       }
 
@@ -208,7 +209,7 @@
 
       > .social-text {
         color: $color-16;
-        font-weight: $font-weight-light;
+        font-weight: $font-weight-normal;
         text-transform: uppercase;
       }
 
