unified styles and markup for sidenav

--- a/app/styles/components/c-mobile-menu.scss
+++ b/app/styles/components/c-mobile-menu.scss
@@ -10,8 +10,12 @@
   top: 0;
   transform: translatex(-100%);
   transition: transform ease-in .2s;
-  width: 325px;
+  width: 300px;
   z-index: 100;
+
+  @media #{$mq-tablet} {
+    width: 325px;
+  }
 
   &.-show {
     transform: translatex(0);
