--- a/public/form/css/styles.css
+++ b/public/form/css/styles.css
@@ -42,6 +42,10 @@ a {
   text-decoration: none;
 }
 
+a:visited {
+  color: #fff;
+}
+
 @font-face {
   font-family: 'roboto-slab';
   src: url('roboto/RobotoSlab-Regular.ttf') format('truetype');
@@ -318,130 +322,111 @@ header {
 }
 
 /* Mobile menu */
-.mobile-menu {
+.c-mobile-menu {
+  background-color: #0d1a34;
+  bottom: 0;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
+  left: 0;
+  padding: 25px 30px;
   position: fixed;
   top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 10;
-  visibility: hidden;
-  transition: visibility 0s .3s;
-  will-change: visibility;
-}
-
-.mobile-menu:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  transition: opacity .3s ease-out;
-  background-color: rgba(0, 0, 0, .8);
-  will-change: opacity;
-}
-
-.mobile-menu.-opened {
-  visibility: visible;
-  transition: visibility 0s 0s;
-}
-
-.mobile-menu.-opened:before {
-  opacity: 1;
-}
-
-.mobile-menu .drawer {
-  position: absolute;
-  top: 0;
-  left: -300px;
+  transform: translatex(-100%);
+  transition: transform ease-in .2s;
   width: 300px;
-  height: 100%;
-  overflow-y: auto;
-  -webkit-overflow-scrolling: touch;
-  padding: 30px;
-  transition: transform .3s ease-in-out;
-  will-change: transform;
-  background-color: #0D1A34;
+  z-index: 100;
 }
-
 @media screen and (min-width: 768px) {
-  .mobile-menu .drawer {
-    left: -325px;
+  .c-mobile-menu {
     width: 325px;
   }
 }
-
-.mobile-menu.-opened .drawer {
-  transform: translateX(100%);
+.c-mobile-menu.-show {
+  transform: translatex(0);
 }
-
-.mobile-menu .drawer ul {
+.c-mobile-menu ul {
   list-style: none;
 }
-
-.mobile-menu .drawer ul li {
-  padding: 10px 0;
-}
-
-.mobile-menu .drawer ul li {
+.c-mobile-menu ul li {
+  color: #fff;
   display: block;
-  color: #FFF;
   font-size: 18px;
   font-weight: 700;
-  line-height: 1.5;
+  line-height: 2.58;
 }
-
-.mobile-menu .drawer ul li > a {
-  color: #FFF;
-  text-decoration: none;
-}
-
-.mobile-menu .drawer .submenu_mobile {
+.c-mobile-menu .submenu-mobile {
   list-style: none;
   padding-left: 30px;
 }
-
-.mobile-menu .drawer .submenu_mobile li {
+.c-mobile-menu .submenu-mobile li {
+  color: #fff;
   display: block;
-  color: #FFF;
   font-size: 18px;
-  font-weight: 400;
-  padding: 10px 0;
+  line-height: 2.58;
 }
-
-.mobile-menu .drawer .submenu_mobile li > a {
-  color: #FFF;
-  text-decoration: none;
+.c-mobile-menu .submenu-mobile li > a {
+  color: #fff;
+  font-weight: 300;
 }
-
-.mobile-menu .drawer .button_login {
-  background-color: #92b9c6;
+.c-mobile-menu .button-login {
+  background-color: #8abbc7;
+  border: 0;
+  color: #fff;
+  cursor: pointer;
+  display: block;
   font-size: 14px;
   font-weight: 700;
-  line-height: 60px;
   letter-spacing: 1px;
+  line-height: 1.29;
+  margin-bottom: 15px;
+  margin-top: 15px;
+  padding: 22px 60px;
   text-align: center;
   text-transform: uppercase;
-  display: block;
+  width: 100%;
+}
+.c-mobile-menu .forgot-text {
+  display: flex;
   align-items: center;
-  padding: 0 30px;
-  height: 60px;
   color: #fff;
-  text-decoration: none;
-  margin: 15px 0;
+  display: flex;
+  font-family: 'roboto-slab', serif;
+  font-size: 13px;
+  justify-content: space-between;
+  padding-left: 0;
+}
+.c-mobile-menu .forgot-text .forgot-password {
+  color: #fff;
+}
+.c-mobile-menu .forgot-text > .register {
+  background: none;
+  border: 0;
+  cursor: pointer;
+  font-family: inherit;
+  font-size: inherit;
+  color: inherit;
+  padding: 0;
+}
+.c-mobile-menu .forgot-text > .register::before {
+  content: '';
+  display: inline-block;
+  width: 5px;
 }
 
-/*.mobile-menu .drawer .forgot_text > a {
-  display: inline-block;
-  margin-bottom: 5px;
-  color: #FFF;
-  font-size: 16px;
-  font-weight: 400;
-  text-decoration: none;
-  border-bottom: 1px solid #ef4323;
-}*/
+.menu-back {
+  background-color: rgba(0, 0, 0, 0.8);
+  bottom: 0;
+  display: none;
+  left: 0;
+  opacity: 0;
+  position: fixed;
+  right: 0;
+  top: 0;
+  z-index: 20;
+}
+.menu-back.-show {
+  display: block;
+  opacity: .9;
+}
 
 section {
   justify-content: center;
