font-family applied to button properly

--- a/public/form/css/styles.css
+++ b/public/form/css/styles.css
@@ -379,6 +379,7 @@ body {
   color: #fff;
   cursor: pointer;
   display: block;
+  font-family: inherit;
   font-size: 14px;
   font-weight: 700;
   letter-spacing: 1px;
