added also overflow to apps sidenav

--- a/app/styles/components/c-mobile-menu.scss
+++ b/app/styles/components/c-mobile-menu.scss
@@ -5,6 +5,7 @@
   bottom: 0;
   box-shadow: 0 2px 4px 0 rgba($color-12, .5);
   left: 0;
+  overflow: auto;
   padding: 25px 30px;
   position: fixed;
   top: 0;
