--- a/app/styles/components/c-cover-page.scss
+++ b/app/styles/components/c-cover-page.scss
@@ -144,6 +144,7 @@
 
   //dots control de slider at home
   .dots-cover {
+    line-height: 0;
     list-style: none;
     position: relative;
     top: 0;
@@ -156,29 +157,31 @@
 
     li {
       display: inline-block;
+      line-height: 0;
       position: relative;
 
       button {
         background: $color-4;
         border: 0;
         font-size: 0;
-        height: 16px;
+        height: 15px;
         margin-right: 15px;
         outline: 0;
         position: relative;
         transform: rotate(45deg);
-        width: 16px;
+        width: 15px;
         z-index: 2;
       }
 
       &::after {
-        height: 2px;
         background-color: $color-4;
         content: '';
-        position: absolute;
-        width: 12px;
-        top: 60%;
+        height: 1px;
         left: 55%;
+        position: absolute;
+        top: 50%;
+        transform: translate(0, -50%);
+        width: 12px;
       }
 
       &:last-child {
