--- a/app/styles/components/c-contact.scss
+++ b/app/styles/components/c-contact.scss
@@ -16,4 +16,27 @@
     top: 0;
     z-index: 0;
   }
+
+  .contain-text-contact {
+    font-family: $font-family-1;
+    margin-bottom: 30px;
+    position: relative;
+    z-index: 1;
+
+    h1 {
+      color: $color-4;
+      font-size: $font-size-xxx-big;
+      font-weight: $font-weight-bold;
+      letter-spacing: -1px;
+      margin: 40px 0 30px;
+      text-align: center;
+    }
+
+    p {
+      color: $color-4;
+      font-size: $font-size-x-medium;
+      line-height: 1.68;
+      text-align: center;
+    }
+  }
 }
