Extract home slider content to json

--- a/app/styles/components/c-cover-page.scss
+++ b/app/styles/components/c-cover-page.scss
@@ -51,6 +51,10 @@
     }
   }
 
+  .stub::after{
+    height: 0px;
+  }
+
   //Cover different with quote and different kind of text
   .leo-slider {
     padding-top: 170px;
