--- a/app/styles/components/c-footer.scss
+++ b/app/styles/components/c-footer.scss
@@ -56,7 +56,6 @@
           width: calc(100%/3);
 
           @media #{$mq-mobile-large} {
-            max-width: none;
             width: 170px;
           }
         }
@@ -112,19 +111,21 @@
   //Section Navigation footer
   .nav-footer {
     display: flex;
+    flex-wrap: wrap;
     justify-content: flex-start;
-    padding: 30px 0;
+    padding: 30px 0 0;
 
     @media #{$mq-tablet} {
+      flex-wrap: nowrap;
       justify-content: space-between;
       padding: 55px 50px 60px 0;
     }
 
-    .nav-section,
-    .nav-section-mobile {
-      display: flex;
-      flex-direction: column;
+    .nav-section {
+      column-count: 2;
       list-style: none;
+      margin-bottom: 30px;
+      width: 100%;
 
       & + .nav-section {
         padding-left: 20px;
@@ -143,13 +144,11 @@
           text-transform: uppercase;
         }
       }
-    }
-
-    .nav-section {
-      display: none;
 
       @media #{$mq-tablet} {
-        display: block;
+        column-count: 3;
+        margin-bottom: 0;
+        width: inherit;
       }
     }
 
@@ -177,10 +176,10 @@
     }
 
     .social-section {
-      display: none;
+      width: 100%;
 
       @media #{$mq-tablet} {
-        display: block;
+        width: inherit;
       }
     }
   }
@@ -196,7 +195,7 @@
     @media #{$mq-tablet} {
       align-items: center;
       border-top: 0;
-      display: none;
+      display: block;
       padding-bottom: 0;
       padding-top: 0;
     }
