research program page design

--- a/app/styles/components/shared/c-rhombus.scss
+++ b/app/styles/components/shared/c-rhombus.scss
@@ -36,6 +36,10 @@
     line-height: .4;
     margin-left: 15px;
     text-transform: uppercase;
+
+    > a {
+      color: $color-14;
+    }
   }
 
   &.-white {
