--- a/app/styles/components/c-map.scss
+++ b/app/styles/components/c-map.scss
@@ -49,3 +49,12 @@
   height: calc(100% - 38px);
   position: relative;
 }
+
+.image-iframe {
+  background-image: url('../../../assets/images/iframe_image.png');
+  background-size: cover;;
+  border: 0;
+  display: block;
+  height: 100%;
+  width: 100%;
+}
