compress image and fix style errors

--- a/app/styles/components/c-map.scss
+++ b/app/styles/components/c-map.scss
@@ -52,8 +52,7 @@
 
 .image-iframe {
   background-image: url('../../../assets/images/iframe_image.png');
-  background-size: cover;;
-  border: 0;
+  background-size: cover;
   display: block;
   height: 100%;
   width: 100%;
