Change map background image

--- a/app/styles/components/c-map.scss
+++ b/app/styles/components/c-map.scss
@@ -51,7 +51,7 @@
 }
 
 .image-iframe {
-  background-image: url('../../../assets/images/iframe_image.png');
+  background-image: url('../../../assets/images/iframe_image.jpg');
   background-size: cover;
   display: block;
   height: 100%;
